banner section done

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="header"></div>
-    <div class="body"></div>
+    <div class="banner-section">
+      <div>
+        <h2>"In the near future, I hope to become a Developer."</h2>
+        <p>
+          We Offer You · Learn from the best engineers · Make yourself ready for
+          the industry .
+        </p>
+        <div>
+          <button>Contact with me</button>
+        </div>
+      </div>
+    </div>
+
     <div class="footer"></div>
   </body>
 </html>
