banner section done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="banner-section">
       <div>
+        <img src="./assets/Group.png" alt="" />
         <h2>"In the near future, I hope to become a Developer."</h2>
         <p>
           We Offer You · Learn from the best engineers · Make yourself ready for
@@ -19,7 +20,79 @@
         </div>
       </div>
     </div>
+    <div class="section-2">
+      <div class="top-content">
+        <h2>Why Web Development??</h2>
+        <p>
+          Development is a highly contested term. It can be understood as a
+          process likely to happen with economic growth or it could be
+          understood as a dynamic ...
+        </p>
+      </div>
 
-    <div class="footer"></div>
+      <div class="card">
+        <div class="card-1">
+          <div class="card-1-content">
+            <h2>I will Do Coding and Change The World</h2>
+            <p>
+              i've been wanting to do this for <br />
+              a while now, and I think I'm ready.
+            </p>
+            <button>Learn More</button>
+          </div>
+          <div class="card-1-img">
+            <img src="./assets/Layer_1.png" alt="" />
+          </div>
+        </div>
+        <div class="card-2">
+          <div class="card-2-img">
+            <img src="./assets/Group 3.png" alt="" />
+          </div>
+          <div class="card-2-content">
+            <h2>I will help People by creating Modern Web System</h2>
+            <p>
+              i've been wanting to do this for <br />
+              a while now, and I think I'm ready.
+            </p>
+            <button>Learn More</button>
+          </div>
+        </div>
+        <div class="card-3">
+          <div class="card-3-content">
+            <h2>I will Do Coding and Change The World</h2>
+            <p>
+              i've been wanting to do this for <br />
+              a while now, and I think I'm ready.
+            </p>
+            <button>Learn More</button>
+          </div>
+          <div class="card-3-img">
+            <img src="./assets/Group 4.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-2">
+      <div class="top-content">
+        <h2>My Inspiration</h2>
+        <p style="margin: 10px 0">
+          Development is a highly contested term. It can be understood as a
+          process likely to happen with economic growth..
+        </p>
+      </div>
+      <div style="margin-top: 30px">
+        <iframe
+          width="908"
+          height="450"
+          src="https://www.youtube.com/embed/3cVJBQKIcdc"
+          title="মনোযোগ ধরে রাখতে না পারায় বারবার ফোকাস নষ্ট হচ্ছে - এই সমস্যার সমাধান কী?  - Jhankar Mahbub"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
   </body>
 </html>
