target section done

--- a/index.html
+++ b/index.html
@@ -94,5 +94,37 @@
         ></iframe>
       </div>
     </div>
+
+    <div class="section-2">
+      <div class="top-content">
+        <h2>My Current Target</h2>
+        <p style="margin: 10px 0">
+          The currentTarget read-only property of the Event interface identifies
+          the element to which the event handler has been attached.
+        </p>
+      </div>
+      <div class="taget-card">
+        <div class="target-card-all">
+          <div class="html">
+            <img src="./assets/html.png" alt="" />
+            <h2>HTML</h2>
+            <p>Well organized and easy to understand Web building ...</p>
+            <div class="target-btn"><span>learn more</span></div>
+          </div>
+          <div class="css">
+            <img src="./assets/css.png" alt="" />
+            <h2>CSS</h2>
+            <p>Well organized and easy to understand Web building ...</p>
+            <div class="target-btn"><span>learn more</span></div>
+          </div>
+          <div class="javascript">
+            <img src="./assets/js.png" alt="" />
+            <h2>JavaScript</h2>
+            <p>Well organized and easy to understand Web building ...</p>
+            <div class="target-btn"><span>learn more</span></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
