support section done

--- a/index.html
+++ b/index.html
@@ -126,5 +126,18 @@
         </div>
       </div>
     </div>
+
+    <div class="support-section">
+      <div class="support-content">
+        <h2>I need Support</h2>
+        <p>
+          Talk to someone you know will support you and offer you honest advice.
+        </p>
+        <div>
+          <input placeholder="sugest me any feedback" type="text" />
+          <button>Submit</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
