--- a/index.html
+++ b/index.html
@@ -139,5 +139,20 @@
         </div>
       </div>
     </div>
+
+    <div class="footer">
+      <div class="footer-content">
+        <div class="footer-left">
+          <p>An Open Commitment by Rakib Hasan</p>
+        </div>
+        <div class="footer-right">
+          <div class="fb"><img src="./assets/facebook.png" alt="" /></div>
+          <div class="github"><img src="./assets/github.png" alt="" /></div>
+          <div class="linkedin">
+            <img src="./assets/linkedin-icon 1.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
