--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </p>
         <div>
           <input placeholder="sugest me any feedback" type="text" />
-          <button>Submit</button>
+          <button class="support-btn">Submit</button>
         </div>
       </div>
     </div>
@@ -146,10 +146,20 @@
           <p>An Open Commitment by Rakib Hasan</p>
         </div>
         <div class="footer-right">
-          <div class="fb"><img src="./assets/facebook.png" alt="" /></div>
-          <div class="github"><img src="./assets/github.png" alt="" /></div>
+          <div class="fb">
+            <a href="https://www.facebook.com/"
+              ><img src="./assets/facebook.png" alt=""
+            /></a>
+          </div>
+          <div class="github">
+            <a href="https://github.com/"
+              ><img src="./assets/github.png" alt=""
+            /></a>
+          </div>
           <div class="linkedin">
-            <img src="./assets/linkedin-icon 1.png" alt="" />
+            <a href="https://www.linkedin.com/"
+              ><img src="./assets/linkedin-icon 1.png" alt=""
+            /></a>
           </div>
         </div>
       </div>
