banner section button link done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
           the industry .
         </p>
         <div>
-          <button>Contact with me</button>
+          <button class="banner-btn">
+            <a href="#footer-text">Contact with me</a>
+          </button>
         </div>
       </div>
     </div>
@@ -143,7 +145,7 @@
     <div class="footer">
       <div class="footer-content">
         <div class="footer-left">
-          <p>An Open Commitment by Rakib Hasan</p>
+          <p id="footer-text">An Open Commitment by Rakib Hasan</p>
         </div>
         <div class="footer-right">
           <div class="fb">
